--- a/checkableitemviews/build.gradle
+++ b/checkableitemviews/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'checkable-item-views'
+
+    publishedGroupId = 'pro.appus'
+    libraryName = 'checkable-item-views'
+    artifact = 'checkable-item-views'
+
+    libraryDescription = 'CheckableItemViews is a library that allows you to use any views as RadioButtons.'
+
+    siteUrl = 'https://github.com/appus-studio/CheckableItemViews'
+    gitUrl = 'https://github.com/appus-studio/CheckableItemViews.git'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'kharkovvip'
+    developerName = 'Vladimir Yerokhin'
+    developerEmail = 'vladimir.yerokhin@appus.me'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
@@ -22,3 +46,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
