--- a/checkableitemviews/build.gradle
+++ b/checkableitemviews/build.gradle
@@ -1,36 +1,12 @@
 apply plugin: 'com.android.library'
 
-ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'checkable-item-views'
-
-    publishedGroupId = 'pro.appus'
-    libraryName = 'checkable-item-views'
-    artifact = 'checkable-item-views'
-
-    libraryDescription = 'CheckableItemViews is a library that allows you to use any views as RadioButtons.'
-
-    siteUrl = 'https://github.com/appus-studio/CheckableItemViews'
-    gitUrl = 'https://github.com/appus-studio/CheckableItemViews.git'
-
-    libraryVersion = '1.0.0'
-
-    developerId = 'kharkovvip'
-    developerName = 'Vladimir Yerokhin'
-    developerEmail = 'vladimir.yerokhin@appus.me'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-}
-
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -44,8 +20,33 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:appcompat-v7:24.1.1'
 }
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'CheckableItemViews'
+
+    publishedGroupId = 'pro.appus'
+    libraryName = 'CheckableItemViews'
+    artifact = 'CheckableItemViews'
+
+    libraryDescription = 'CheckableItemViews is a library that allows you to use any views as RadioButtons.'
+
+    siteUrl = 'https://github.com/appus-studio/CheckableItemViews'
+    gitUrl = 'https://github.com/appus-studio/CheckableItemViews.git'
+    githubRepository = 'appus-studio/CheckableItemViews'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'vladimir-yerokhin-appus'
+    developerName = 'Vladimir Yerokhin'
+    developerEmail = 'vladimir.yerokhin@appus.me'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/bintrayv1.gradle'
