--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "http://dl.bintray.com/appus-android/maven"
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project (':checkableitemviews')
